--- a/app/src/main/res/layout/activity_randomizer.xml
+++ b/app/src/main/res/layout/activity_randomizer.xml
@@ -13,8 +13,11 @@
             android:layout_height="wrap_content"
             android:id="@+id/random_number_text_view"
             android:layout_marginTop="8dp"
-            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="8dp"
+            app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp"/>
 </android.support.constraint.ConstraintLayout>
