--- a/app/src/main/res/layout/activity_randomizer.xml
+++ b/app/src/main/res/layout/activity_randomizer.xml
@@ -8,7 +8,7 @@
         tools:context=".feature.randomizer.RandomizerActivity">
 
     <TextView
-            tools:text="TextView"
+            tools:text="ZERO"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/random_number_text_view"
@@ -20,4 +20,12 @@
             android:layout_marginEnd="8dp"
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp"/>
+    <Button
+            android:text="@string/increment"
+            android:layout_width="250dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/increment_button" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/random_number_text_view"
+            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
 </android.support.constraint.ConstraintLayout>
